--- a/css.css
+++ b/css.css
@@ -14,4 +14,10 @@ button {
   display: inline-block;
   white-space: nowrap;          /* Prevents wrapping */
   box-shadow: 0 2px 6px rgba(0,0,0,0.06);
+    -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* i forgor */
 }
