--- a/css.css
+++ b/css.css
@@ -1,11 +1,11 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto+Mono:400,700&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Roboto+Mono:400,700&display=swap'); /* import Roboto Mono */
+@import url('https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap'); /* import Roboto*/
 button {
   /* makey the button pretty */
   font-family: 'Roboto Mono', monospace;
-  background-color: #95C3FF;
+  background-color: #95C3FF; /* Set button bubble color*/
   border: none;
-  color: #000000;
+  color: #000000; /* Unknown */
   border-radius: 999px;         /* Pill shape */
   padding: 0.5em 1.5em;         /* Responsive padding */
   min-width: 2.5em;             /* Ensures pill shape even for short text */
